SUBDIRS = correlation \
		  extract_nessus \
		  extract_osvdb

scriptsdir   = $(datadir)/ossim/scripts
scripts_SCRIPTS = acid_cache.pl \
				  chkconfig.pl \
				  connect_ossim_db.sh \
				  create_sidmap.pl \
				  do_nessus.pl \
				  draw_graph_combined.pl \
				  draw_graph_fournier.pl \
	              draw_graph.pl \
			      get_date.pl \
				  get_osvdb.pl \
				  get_rrd_value.pl \
			      manage_i18n.sh \
				  netbios.pl \
				  restoredb.pl \
				  rrd_plugin.pl \
	              services.pl \
				  test-directive.pl \
				  check_makefile.sh \
				parse_cisco_facilities.pl \
				testShellcode.py \
				sophos.py \
				mysql2csv \
				intrushield_update.py \
				insertHostNetbiosFromAD.py \
				create_sidmap_preprocessors.pl \
				restoredb_filter.php \
				restoredb_sql_patches.pl \
				console_alarms.py \
				check_vars.pl 

DISTCLEANFILES = Makefile.in


