classesdir   = $(datadir)/ossim/include/classes
classes_DATA = About.inc \
	Action.inc \
	Action_type.inc \
	Action_exec.inc \
	Action_email.inc \
	Alarm.inc \
	Backlog.inc \
	Backlog_event.inc \
	Backup.inc \
	Business_Process.inc \
	Category.inc \
	CIDR.inc \
	Classification.inc \
	Config.inc \
	Control_panel_host.inc \
	Control_panel_net.inc \
	Event.inc \
	Event_viewer.inc \
	Event_viewer_draw.inc \
	Host.inc \
	Host_ids.inc \
	Host_group.inc \
	Host_group_scan.inc \
	Host_group_reference.inc \
	Host_group_sensor_reference.inc \
	Host_mac.inc \
	Host_netbios.inc \
	Host_os.inc \
	Host_position.inc \
	Host_qualification.inc \
	Host_scan.inc \
	Host_sensor_reference.inc \
	Host_services.inc \
	Host_vulnerability.inc \
	Incident.inc \
	Incident_alarm.inc \
	Incident_anomaly.inc \
	Incident_event.inc \
	Incident_metric.inc \
	Incident_ticket.inc \
	Incident_file.inc \
	Incident_tag.inc \
	Incident_type.inc \
	Incident_vulnerability.inc \
	Locale.inc \
	Log_config.inc \
	Log_action.inc \
	Net_group.inc \
	Net_group_reference.inc \
	Net_group_scan.inc \
	Net_sensor_reference.inc \
	Net.inc \
	Net_qualification.inc \
	Net_scan.inc \
	Net_vulnerability.inc \
	Osvdb.inc \
	PDF.inc \
	Plugin.inc \
	Plugin_reference.inc \
	Plugin_sid.inc \
	Plugin_scheduler.inc \
	Plugin_scheduler_sensor_reference.inc \
	Plugin_scheduler_netgroup_reference.inc \
        Plugin_scheduler_hostgroup_reference.inc \
        Plugin_scheduler_host_reference.inc \
        Plugin_scheduler_net_reference.inc \
	Plugingroup.inc \
	Policy_host_reference.inc \
	Policy.inc \
	Policy_net_reference.inc \
	Policy_port_reference.inc \
	Policy_ports_reference.inc \
	Policy_sensor_reference.inc \
	Policy_sig_reference.inc \
	Policy_role_reference.inc \
	Policy_target_reference.inc \
	Policy_time.inc \
	Port_group.inc \
	Port_group_reference.inc \
	Port.inc \
	Protocol.inc \
	Response_action.inc \
	Response_host.inc \
	Response.inc \
	Response_net.inc \
	Response_plugin.inc \
	Response_port.inc \
	Role.inc \
	RRD_anomaly_global.inc \
	RRD_anomaly.inc \
	RRD_config.inc \
	Scan.inc \
	Security.inc \
	SecurityReport.inc \
	Sensor.inc \
	Sensor_interfaces.inc \
	Session.inc \
	Server.inc \
	Signature_group.inc \
	Signature_group_reference.inc \
	Signature.inc \
	Upgrade.inc \
	Upgrade_base.inc \
	User_config.inc \
	Util.inc \
	WebIndicator.inc \
	Xajax.inc 

EXTRA_DIST   = $(classes_DATA)
DISTCLEANFILES = Makefile.in
