upgradesdir   = $(datadir)/ossim/include/upgrades
upgrades_DATA = 0.9.9rc1_mysql.sql \
				0.9.9rc2_mysql.sql \
				0.9.9rc3_mysql.sql \
				0.9.9rc4_mysql.sql \
				0.9.9rc1.php \
				0.9.9rc4.php \
				0.9.9rc5_mysql.sql \
				0.9.9rc5.php

EXTRA_DIST   = $(upgrades_DATA)

DISTCLEANFILES = Makefile.in
