controlpaneldir = $(datadir)/ossim/www/control_panel
controlpanel_DATA = backlog.php \
	handle_anomaly.php \
	handle_os.php \
	handle_services.php \
	services.php \
	mac.php \
	os.php \
	handle_mac.php \
	handle_services.php \
	find_peaks.php \
	global_score.php \
	alarm_console.php \
	events.php \
	event_panel.php \
	anomalies.php \
	visualize.php \
	rrd_anomaly.php \
	rrd_global.php \
	services.php \
    svg_level.php \
	show_image.php

EXTRA_DIST   = $(controlpanel_DATA)

DISTCLEANFILES = Makefile.in

