hostdir = $(datadir)/ossim/www/host
host_DATA = host.php \
	modifyhostform.php \
	newhostform.php \
	deletehost.php \
	modifyhost.php \
	newhost.php \
	deletehostgroup.php \
	newhostgroupform.php \
	modifyhostgroupform.php \
	modifyhostgroup.php \
	hostgroup.php \
	newhostgroup.php

EXTRA_DIST   = $(host_DATA)

DISTCLEANFILES = Makefile.in
