mapsdir = $(datadir)/ossim/www/maps
maps_DATA = draw_openlayers.php \
            index.php \
            new.php \
            openlayers_image.php \
            openlayers_markers_text.php \
            openlayers.php \
            output_image_map.php \
            positions_map.php \
            positions.php
            
EXTRA_DIST   = $(maps_DATA)

DISTCLEANFILES = Makefile.in

