netdir = $(datadir)/ossim/www/net
net_DATA = deletenet.php \
	deletenetgroup.php \
	modifynetgroupform.php \
	modifynetgroup.php \
	netgroup.php\
	newnetgroup.php \
	newnetgroupform.php \
	modifynetform.php \
	modifynet.php \
	net.php \
	newnetform.php \
	newnet.php

EXTRA_DIST   = $(net_DATA)

DISTCLEANFILES = Makefile.in
