SUBDIRS = os top panel therm

pixmapsdir = $(datadir)/ossim/www/pixmaps
pixmaps_DATA = arrow.gif \
	arrow2.gif \
	calendar.gif \
	delim.jpg \
	gauge-green.jpg \
	gradient1.jpg \
	graph.gif \
	major-green.jpg \
	white_bg.gif \
	delim.jpg \
	gauge-red.jpg \
	gradient2.jpg \
	Hammer2.png \
	major-red.gif \
	rrdnotfound.png \
	solid-blue.jpg \
	gauge-blue.jpg \
	gauge-yellow.jpg \
	grafcuadestat.gif \
	major.gif \
	major-yellow.gif \
	solid-red.jpg \
	riskmeter.png \
	incident.png \
	logo.png \
	logo3.jpg \
	help.png \
	traffic_light0.gif \
	traffic_light1.gif \
	traffic_light2.gif \
	traffic_light3.gif \
	traffic_light4.gif \
	traffic_light5.gif

EXTRA_DIST   = $(pixmaps_DATA)
DISTCLEANFILES = Makefile.in
