policydir = $(datadir)/ossim/www/policy
policy_DATA = modifyplugingroups.php \
		newpolicy.php \
		deletepolicy.php \
		modifypolicyform.php \
		plugingroups.php \
		modifypolicy.php \
		policy.php \
		modifyplugingroupsform.php \
		newpolicyform.php

EXTRA_DIST   = $(policy_DATA)
DISTCLEANFILES = Makefile.in
