SUBDIRS=graphs jgraphs
reportdir = $(datadir)/ossim/www/report
report_DATA = index.php \
	anomalies.php \
	inventory.php \
	incidentreport.php \
	menu.php \
	metrics.php \
	report.php \
	pdfreport.php \
	pdfreportform.php \
	sec_report.php \
	sec_util.php
EXTRA_DIST   = $(report_DATA)

DISTCLEANFILES = Makefile.in

