sensordir = $(datadir)/ossim/www/sensor
sensor_DATA = editsensor.php \
  modifysensorform.php \
  newsensorform.php \
  sensor.php \
  deletesensor.php \
  modifysensor.php \
  newsensor.php \
  get_sensor_plugins.php \
  get_sensors.php \
  interfaces.php \
  sensor_plugins.php
EXTRA_DIST   = $(sensor_DATA)
DISTCLEANFILES = Makefile.in
