thermdir = $(datadir)/ossim/www/pixmaps/therm
therm_DATA = burst.jpg \
			thermbar.jpg \
			thermbar_yellgre.jpg \
			therm_green.jpg \
			therm_orange.jpg \
			therm_yellow.jpg \
			thermbar_green.jpg \
			thermbar_orange.jpg \
			thermbar_yellow.jpg \
			therm.jpg \
			therm_yellgre.jpg

EXTRA_DIST   = $(therm_DATA)

DISTCLEANFILES = Makefile.in
