imgdir = $(datadir)/ossim/www/js/OpenLayers/img
img_DATA = blank.gif \
			close.gif \
			drag-rectangle-off.png \
			drag-rectangle-on.png \
			east-mini.png \
			layer-switcher-maximize.png \
			layer-switcher-minimize.png \
			marker-blue.png \
			marker-gold.png \
			marker-green.png \
			marker.png \
			measuring-stick-off.png \
			measuring-stick-on.png \
			north-mini.png \
			panning-hand-off.png \
			panning-hand-on.png \
			slider.png \
			south-mini.png \
			west-mini.png \
			zoombar.png \
			zoom-minus-mini.png \
			zoom-plus-mini.png \
			zoom-world-mini.png

EXTRA_DIST   = $(img_DATA)

DISTCLEANFILES = Makefile.in
